2008-03-29  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.15.0 released

	* akfavatar.h (AVT_DEPRECATED, AVT_UNUSED):
	new makro used to mark deprecated or unused stuff (gcc only)

	* avatarsay.c (get_user_home):
	new function
	(run_shell): chdir to home directory before starting the shell

	* avatarsay.c (get_user_shell):
	first search for the environment variable SHELL

	* avtfilechooser.c:
	new file
	avatarsay.c (ask_file): use avtfilechooser

	* avatar.c (avt_initialize):
	balloon height must be at least 10 lines

	* akfavatar.h, avatar.c (avt_button_quit):
	new function

	* akfavatar.h (AKFAVATAR):
	new macro

	* akfavatar.h, avatar.c (avt_normal_text):
	new function

	* akfavatar.h, avatar.c (avt_inverse, avt_get_inverse):
	new functions

	* akfavatar.h, avatar.c (avt_save_position, avt_restore_position):
	new functions

	* akfavatar.h, avatar.c (avt_move_xy):
	new function

	* akfavatar.h, avatar.c (avt_reserve_single_keys):
	new function
	(avt_stop_on_esc): removed

	* avatarsay.c:
	support options -b, --nocolor
	remove options -s, --saypipe

	* avatarsay.c (check_encoding, getwline):
	don't remove byte order marks, but ignore them while reading

	* avatarsay.c (process_file):
	skip lines "@echo off" through "exit" (for Windows/ReactOS)

	* avatar.c (avt_say, avt_say_len, backspace_trick):
	support backspace trick for underlining and bold printing

	* avatar.c:
	no text-delay as default

	* avatar-audio.c (short_audio_sound):
	avoid sound to interrupt itself or other sounds
	
        * avatar.c (text_background_color):
	new variable

	* avatar.c (avt_drawchar):
	optimized, support for bold and underline

	* akfavatar.h, avatar.c (avt_bold, avt_get_bold):
	new functions

	* akfavatar.h, avatar.c (avt_underlined, avt_get_underlined):
	new functions

	* akfavatar.h, avatar.c (AVT_MAKE_BOOL):
	new makro

	* akfavatar.h, avatar.c (avt_get_menu):
	new function

	* akfavatar.h, avatar.c (avt_next_tab, avt_last_tab)
	  (avt_clear_tab_stops, avt_set_tab):