@@ -1,3 +1,8 @@
+2008-03-31  Andreas K. Foerster  <info@akfoerster.de>
+
+	*avatarsay.c (check_config_file):
+	keyword BACKGROUNDCOLOR
+
 2008-03-29  Andreas K. Foerster  <info@akfoerster.de>
 
 	* version 0.15.0 released
